--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
+  <html lang="pt-BR">
 <head>
-<link rel="stylesheet" href="style.css" />
+   <link rel="stylesheet" href="style.css" />
+   <title>AluraFlix</title>
 </head>
 
 <body>
-<header>sabyneflix</header>
+   <header>sabyneflix</header>
+    
+   <section>
+    <div>
 <h1>As Aventuras Divertidas de Garfield! </h1>
 <p>garfild aventuras diverdidas com seus amigos</p>
+</div>
+
+<div>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/vUggnr-bJR4?si=Dlkz7PVWA6Z9kUT6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </body>
+
